--- a/Plugins/pvblot/pvblot.bat.in.in
+++ b/Plugins/pvblot/pvblot.bat.in.in
@@ -1,7 +1,6 @@
-@set PVPYTHON=@PVBLOT_PVPYTHON_EXECUTABLE@
-@set BLOTISH_PATH=@PVBLOT_BLOTISH_PATH@
+@set PVPYTHON=$<TARGET_FILE:ParaView::pvpython>
+@set BLOTISH_PATH=@CMAKE_CURRENT_SOURCE_DIR@
 
 @set PYTHONPATH=%BLOTISH_PATH%;%PYTHONPATH%
 
 call %PVPYTHON% %BLOTISH_PATH%\pvblot.py %1 %2 %3
-
