--- a/Plugins/pvblot/pvblot.in.in
+++ b/Plugins/pvblot/pvblot.in.in
@@ -1,7 +1,7 @@
 #!/bin/sh
 
-PVPYTHON=@PVBLOT_PVPYTHON_EXECUTABLE@
-BLOTISH_PATH=@PVBLOT_BLOTISH_PATH@
+PVPYTHON=$<TARGET_FILE:ParaView::pvpython>
+BLOTISH_PATH=@CMAKE_CURRENT_SOURCE_DIR@
 
 export PYTHONPATH=${BLOTISH_PATH}:${PYTHONPATH}
 
