--- a/Qt/ApplicationComponents/CMakeLists.txt
+++ b/Qt/ApplicationComponents/CMakeLists.txt
@@ -102,6 +102,7 @@ set(classes
   pqHandlePropertyWidget
   pqIgnoreSourceTimeReaction
   pqImageCompressorWidget
+  pqImmediateExportReaction
   pqImplicitPlanePropertyWidget
   pqImportCinemaReaction
   pqInputDataTypeDecorator
