Adding an xml override example

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -28,6 +28,7 @@ if (PARAVIEW_BUILD_QT_GUI)
   add_subdirectory(Plugins/DockWidget)
   add_subdirectory(Plugins/GUIToolBar)
   add_subdirectory(Plugins/LagrangianIntegrationModel)
+  add_subdirectory(Plugins/OverrideXMLOnly)
   add_subdirectory(Plugins/PropertyWidgets)
   add_subdirectory(Plugins/Reader)
   add_subdirectory(Plugins/ReaderXMLOnly)
