--- a/Plugins/BagPlotViewsAndFilters/CMakeLists.txt
+++ b/Plugins/BagPlotViewsAndFilters/CMakeLists.txt
@@ -18,7 +18,9 @@ add_paraview_plugin(BagPlotViewsAndFilters "1.0"
   vtkPVExtractBagPlots.cxx
   vtkSMFunctionalBagChartSeriesSelectionDomain.cxx
   vtkSMBagChartSeriesListDomain.cxx
-  vtkPVBagChartRepresentation.cxx)
+  vtkPVBagChartRepresentation.cxx
+  vtkPVBagPlotMatrixView.cxx
+  vtkPVBagPlotMatrixRepresentation.cxx)
 
 if (BUILD_TESTING)
   add_subdirectory(Testing)
