--- a/Plugins/BagPlotViewsAndFilters/Testing/CMakeLists.txt
+++ b/Plugins/BagPlotViewsAndFilters/Testing/CMakeLists.txt
@@ -13,4 +13,8 @@ if (PARAVIEW_BUILD_QT_GUI AND BUILD_SHARED_LIBS)
     LOAD_PLUGIN "BagPlotViewsAndFilters"
     BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
     TEST_SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/FunctionalBagPlots.xml)
+  add_client_tests("pv"
+    LOAD_PLUGIN "BagPlotViewsAndFilters"
+    BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
+    TEST_SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/BagPlotMatrixView.xml)
 endif()
