--- a/Plugins/GmshReader/Testing/CMakeLists.txt
+++ b/Plugins/GmshReader/Testing/CMakeLists.txt
@@ -4,13 +4,15 @@ if (PARAVIEW_BUILD_QT_GUI AND BUILD_SHARED_LIBS)
     "DATA{Data/Gmsh,REGEX:viz_*}"
     "DATA{Data/naca0012,REGEX:.*}")
 
-  add_client_tests(
+  paraview_add_client_tests(
     LOAD_PLUGIN "GmshReader"
     BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
+    TEST_DATA_TARGET ParaViewData
     TEST_SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/GmshReaderTest.xml)
 
-  (
+  paraview_add_client_server_tests(
     LOAD_PLUGIN "GmshReader"
     BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
+    TEST_DATA_TARGET ParaViewData
     TEST_SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/GmshReaderMeshOnlyTest.xml)
 endif()
