vtkPVCommon: rename to vtkPVCore
When building with kits enabled, the `ParaView::Common` target's real
target conflicts with the target name for the `VTK::Common` kit.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -277,7 +277,7 @@ endif ()
 
 if (PARAVIEW_BUILD_QT_GUI)
   list(APPEND paraview_requested_modules
-    ParaView::Common
+    ParaView::Core
     ParaView::ServerManagerApplication
     ParaView::ServerManagerCore
     ParaView::ServerManagerDefault
