--- a/Plugins/SurfaceLIC/Representations/Testing/CMakeLists.txt
+++ b/Plugins/SurfaceLIC/Representations/Testing/CMakeLists.txt
@@ -1,7 +1,7 @@
 # TODO: Needs updated. These have effectively been disabled previously.
 if (FALSE)
 if (PARAVIEW_ENABLE_PYTHON)
-  vtk_module_load_data(
+  vtk_module_test_data(
     Data/shuttle-surf.vtkm
     Data/office.binary.vtk
     Data/shuttle-surf/,REGEX:.*)
