--- a/Utilities/Sphinx/CMakeLists.txt
+++ b/Utilities/Sphinx/CMakeLists.txt
@@ -45,4 +45,4 @@ add_custom_target(ParaViewPythonDoc
           config/api-changes.rst
           config/conf.py.in)
 
-add_dependencies(ParaViewDoc ParaViewPythonDoc)
+add_dependencies(paraview_doc ParaViewPythonDoc)
