Adaptation to the new cmake module mechanism

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -475,6 +475,7 @@ set(paraview_default_plugins
   AcceleratedAlgorithms
   AnalyzeNIfTIReaderWriter
   ArrowGlyph
+  BagPlotViewsAndFilters
   CDIReader
   DigitalRockPhysics
   EULATestPlugin
