--- a/Plugins/BagPlotViewsAndFilters/CMakeLists.txt
+++ b/Plugins/BagPlotViewsAndFilters/CMakeLists.txt
@@ -1,26 +1,33 @@
-cmake_minimum_required(VERSION 3.3)
+vtk_module_scan(
+  MODULE_FILES      "${CMAKE_CURRENT_SOURCE_DIR}/BagPlot/vtk.module"
+  REQUEST_MODULES   BagPlotViewsAndFilters::BagPlotViewsAndFiltersBagPlot
+  PROVIDES_MODULES  bagplot_modules
+  REQUIRES_MODULES  required_modules
+  HIDE_MODULES_FROM_CACHE ON)
 
-if (NOT ParaView_BINARY_DIR)
-  find_package(ParaView REQUIRED)
-  include(${PARAVIEW_USE_FILE})
-endif()
+if (required_modules)
+  foreach (required_module IN LISTS required_modules)
+    if (NOT TARGET "${required_module}")
+      message(FATAL_ERROR
+        "Failed to find the required module ${required_module}.")
+    endif ()
+  endforeach ()
+endif ()
 
-include(ParaViewPlugins)
+vtk_module_build(
+  MODULES             ${bagplot_modules}
+  PACKAGE             BagPlotViewsAndFilters
+  INSTALL_HEADERS     OFF
+  LIBRARY_NAME_SUFFIX "pv${PARAVIEW_VERSION_MAJOR}.${PARAVIEW_VERSION_MINOR}"
+  VERSION             "${PARAVIEW_VERSION}"
+  SOVERSION           "1")
 
-include_directories(
-  ${VTK_INCLUDE_DIRS}
-)
-
-add_paraview_plugin(BagPlotViewsAndFilters "1.0"
-  GUI_RESOURCES BagPlotViewsAndFilters.qrc
+paraview_add_plugin(BagPlotViewsAndFilters
+  REQUIRED_ON_SERVER
+  VERSION "1.0"
   SERVER_MANAGER_XML BagPlotViewsAndFilters.xml
-  SERVER_MANAGER_SOURCES 
-  vtkPVExtractBagPlots.cxx
-  vtkSMFunctionalBagChartSeriesSelectionDomain.cxx
-  vtkSMBagChartSeriesListDomain.cxx
-  vtkPVBagChartRepresentation.cxx
-  vtkPVBagPlotMatrixView.cxx
-  vtkPVBagPlotMatrixRepresentation.cxx)
+  UI_RESOURCES BagPlotViewsAndFilters.qrc 
+  MODULES BagPlotViewsAndFilters::BagPlotViewsAndFiltersBagPlot)
 
 if (BUILD_TESTING)
   add_subdirectory(Testing)
