cmake: disable documentation for now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -806,7 +806,8 @@ endif ()
 
 #-----------------------------------------------------------------------------
 # Build doxygen documentation.
-if (BUILD_DOCUMENTATION)
+# XXX: Disabled for now.
+if (FALSE AND BUILD_DOCUMENTATION)
   add_subdirectory(Utilities/Doxygen)
   add_subdirectory(Utilities/Sphinx)
   add_subdirectory(Documentation)
