smTestDriver: pass the MPI-defined max number of processors

--- a/Utilities/TestDriver/CMakeLists.txt
+++ b/Utilities/TestDriver/CMakeLists.txt
@@ -68,7 +68,7 @@ if (PARAVIEW_USE_MPI)
     PARAVIEW_USE_MPI
     "PARAVIEW_MPIEXEC_EXECUTABLE=\"${MPIEXEC_EXECUTABLE}\""
     "PARAVIEW_MPI_NUMPROC_FLAG=\"${MPIEXEC_NUMPROC_FLAG}\""
-    "PARAVIEW_MPI_MAX_NUMPROCS=${VTK_MPI_MAX_NUMPROCS}")
+    "PARAVIEW_MPI_MAX_NUMPROCS=${MPIEXEC_MAX_NUMPROCS}")
 
   if (MPI_PREFLAGS)
     list(APPEND mpi_defines
