cmake: request VTK::FiltersVerdict
Some of ParaView's internal Python code assumes it exists.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -436,6 +436,7 @@ list(APPEND paraview_requested_modules
   ParaView::ProcessXML
   ParaView::WrapClientServer
   VTK::FiltersFlowPaths
+  VTK::FiltersVerdict
   VTK::IOTRUCHAS
   VTK::IOTecplotTable
   VTK::IOVeraOut)
