Add vtkDataObjectTreeToPointSet filter
If the ExtractSurfaces option is on, this filter produces a single
vtkPolyData output from the surfaces extracted from blocks in the
input. If off, the filter produces a single vtkUnstructuredGrid output
from the entire blocks in the input.

This class is now used for the "Merge Blocks" filter in ParaView.

--- a/ParaViewCore/VTKExtensions/Rendering/CMakeLists.txt
+++ b/ParaViewCore/VTKExtensions/Rendering/CMakeLists.txt
@@ -39,6 +39,7 @@ set(classes
   vtkCleanArrays
   vtkCompositeDataToUnstructuredGridFilter
   vtkContext2DScalarBarActor
+  vtkDataObjectTreeToPointSetFilter
   vtkImageCompressor
   vtkImageTransparencyFilter
   vtkKdTreeGenerator
