--- a/CoProcessing/Catalyst/CMakeLists.txt
+++ b/CoProcessing/Catalyst/CMakeLists.txt
@@ -71,7 +71,7 @@ vtk_module_add_module(ParaView::Catalyst
 vtk_module_client_server_exclude()
 
 if (catalyst_fortran_using_mangling)
-  vtk_module_define(ParaView::Catalyst
+  vtk_module_definitions(ParaView::Catalyst
     PRIVATE
       CATALYST_FORTRAN_USING_MANGLING=1)
 endif ()
