--- a/CMake/paraview-config.cmake.in
+++ b/CMake/paraview-config.cmake.in
@@ -34,7 +34,11 @@ if (NOT _paraview_use_external_vtk)
     PATHS "${CMAKE_CURRENT_LIST_DIR}/vtk"
     NO_DEFAULT_PATH)
 endif ()
-find_package(VTK QUIET REQUIRED
+if (${CMAKE_FIND_PACKAGE_NAME}_FIND_QUIETLY)
+  list(APPEND _paraview_find_package_args
+    QUIET)
+endif ()
+find_package(VTK REQUIRED
   ${_paraview_find_package_args})
 if (NOT VTK_FOUND)
   set("${CMAKE_FIND_PACKAGE_NAME}_FOUND" 0)
