Examples/GUIMyToolBar: update for the new module system

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -38,6 +38,7 @@ endif ()
 add_example(Plugins/Autostart)
 add_example(Plugins/DockWidget)
 add_example(Plugins/ElevationFilter)
+add_example(Plugins/GUIMyToolBar)
 
 if (FALSE)
 
@@ -50,7 +51,6 @@ if (ENABLE_CATALYST)
 endif ()
 
 if (PARAVIEW_BUILD_QT_GUI)
-  add_subdirectory(Plugins/GUIToolBar)
   add_subdirectory(Plugins/LagrangianIntegrationModel)
   add_subdirectory(Plugins/OverrideXMLOnly)
   add_subdirectory(Plugins/PropertyWidgets)
