Examples/LagrangianIntegrationModel: update for the new module system

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -39,6 +39,7 @@ add_example(Plugins/Autostart)
 add_example(Plugins/DockWidget)
 add_example(Plugins/ElevationFilter)
 add_example(Plugins/GUIMyToolBar)
+add_example(Plugins/LagrangianIntegrationModel)
 
 if (FALSE)
 
@@ -51,7 +52,6 @@ if (ENABLE_CATALYST)
 endif ()
 
 if (PARAVIEW_BUILD_QT_GUI)
-  add_subdirectory(Plugins/LagrangianIntegrationModel)
   add_subdirectory(Plugins/OverrideXMLOnly)
   add_subdirectory(Plugins/PropertyWidgets)
   add_subdirectory(Plugins/Reader)
