Examples/PropertyWidgets: update for the new module system

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -41,6 +41,7 @@ add_example(Plugins/ElevationFilter)
 add_example(Plugins/GUIMyToolBar)
 add_example(Plugins/LagrangianIntegrationModel)
 add_example(Plugins/OverrideXMLOnly)
+add_example(Plugins/PropertyWidgets)
 
 if (FALSE)
 
@@ -53,7 +54,6 @@ if (ENABLE_CATALYST)
 endif ()
 
 if (PARAVIEW_BUILD_QT_GUI)
-  add_subdirectory(Plugins/PropertyWidgets)
   add_subdirectory(Plugins/Reader)
   add_subdirectory(Plugins/ReaderXMLOnly)
   # TODO: update this plugin to use the pipeline controller instead.
