--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -40,6 +40,7 @@ add_example(Plugins/DockWidget)
 add_example(Plugins/ElevationFilter)
 add_example(Plugins/GUIMyToolBar)
 add_example(Plugins/LagrangianIntegrationModel)
+add_example(Plugins/MyPNGReader)
 add_example(Plugins/OverrideXMLOnly)
 add_example(Plugins/PropertyWidgets)
 
@@ -54,7 +55,6 @@ if (ENABLE_CATALYST)
 endif ()
 
 if (PARAVIEW_BUILD_QT_GUI)
-  add_subdirectory(Plugins/Reader)
   add_subdirectory(Plugins/ReaderXMLOnly)
   # TODO: update this plugin to use the pipeline controller instead.
   #add_subdirectory(Plugins/RepresentationBehavior)
