Examples/MyTiffWriter: update for the new module system

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -41,6 +41,7 @@ add_example(Plugins/ElevationFilter)
 add_example(Plugins/GUIMyToolBar)
 add_example(Plugins/LagrangianIntegrationModel)
 add_example(Plugins/MyPNGReader)
+add_example(Plugins/MyTiffWriter)
 add_example(Plugins/OverrideXMLOnly)
 add_example(Plugins/PropertyWidgets)
 add_example(Plugins/ReaderXMLOnly)
@@ -58,7 +59,6 @@ if (PARAVIEW_BUILD_QT_GUI)
   # TODO: update this plugin to use the pipeline controller instead.
   #add_subdirectory(Plugins/RepresentationBehavior)
   add_subdirectory(Plugins/SourceToolbar)
-  add_subdirectory(Plugins/Writer)
 
   add_subdirectory(CustomApplications/Clone1)
   add_subdirectory(CustomApplications/Clone2)
