--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -55,6 +55,7 @@ add_example(Plugins/SourceToolbar)
 
 add_example(CustomApplications/Clone1)
 add_example(CustomApplications/Clone2)
+add_example(CustomApplications/Demo0)
 
 if (FALSE)
 
@@ -63,7 +64,6 @@ if (ENABLE_CATALYST)
 endif ()
 
 if (PARAVIEW_BUILD_QT_GUI)
-  add_subdirectory(CustomApplications/Demo0)
   add_subdirectory(CustomApplications/Demo1)
   add_subdirectory(CustomApplications/MultiServerClient)
 # TODO Update this custom application to load only specific data types.
