--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -56,6 +56,7 @@ add_example(Plugins/SourceToolbar)
 add_example(CustomApplications/Clone1)
 add_example(CustomApplications/Clone2)
 add_example(CustomApplications/Demo0)
+add_example(CustomApplications/Demo1)
 
 if (FALSE)
 
@@ -64,7 +65,6 @@ if (ENABLE_CATALYST)
 endif ()
 
 if (PARAVIEW_BUILD_QT_GUI)
-  add_subdirectory(CustomApplications/Demo1)
   add_subdirectory(CustomApplications/MultiServerClient)
 # TODO Update this custom application to load only specific data types.
 #  add_subdirectory(CustomApplications/Spreadsheet) 
