--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -58,16 +58,13 @@ add_example(CustomApplications/Clone2)
 add_example(CustomApplications/Demo0)
 add_example(CustomApplications/Demo1)
 add_example(CustomApplications/MultiServerClient)
+# TODO Update this custom application to load only specific data types.
+# add_example(CustomApplications/Spreadsheet)
 
 if (FALSE)
 
 if (ENABLE_CATALYST)
   add_subdirectory(Catalyst)
 endif ()
-
-if (PARAVIEW_BUILD_QT_GUI)
-# TODO Update this custom application to load only specific data types.
-#  add_subdirectory(CustomApplications/Spreadsheet) 
-endif()
 
 endif ()
